# Chess

./: CMakeLists.txt  build.bat  run.bat
gui/: chess_gui.cpp
include/chess/analysis/: ch_attack.h  ch_legality.h  ch_pins.h
include/chess/core/: ch_bitboard.h  ch_board.h  ch_move.h  ch_square.h  ch_state.h  ch_types.h
include/chess/pieces/: ch_bishop.h  ch_ipiece.h  ch_king.h  ch_knight.h  ch_pawn.h  ch_piece.h  ch_queen.h  ch_rook.h
src/: ch_main.cpp
src/analysis/: ch_attack.cpp  ch_legality.cpp  ch_pins.cpp
src/core/: ch_bitboard.cpp  ch_board.cpp  ch_state.cpp
src/pieces/: ch_piece.cpp
tests/: ch_attack_maps.cpp  ch_pins_king_legal.cpp  ch_test_bitboard.cpp
